# bckt

./: .gitignore  Cargo.toml  PROJECT_GOALS.md  README.md  STRUCTURE.md  STYLE_GUIDE.md  TASKS.md  TECH_STACK.md  build.rs  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  custom_filters.md  pages.md  posts.md  search.md  static-assets.md  templates.md  theme-hosting.md
docs/GettingStarted/: 01-installation.md  02-first-blog.md  03-creating-posts.md  04-publishing.md  05-maintenance.md  README.md
skel/: style.css  style.tailwind.css
src/: cli.rs  config.rs  main.rs  markdown.rs  render.rs  search.rs  template.rs  theme.rs  utils.rs
src/commands/: clean.rs  config.rs  dev.rs  init.rs  mod.rs  render.rs  themes.rs
src/config/: date_format.rs  mod.rs  model.rs  project.rs  search.rs  timezone.rs
src/content/: mod.rs  tests.rs
src/extras/: bckt_fc.rs  bckt_new.rs
src/render/: assets.rs  cache.rs  feeds.rs  listing.rs  mod.rs  pages.rs  posts.rs  templates.rs  tests.rs  utils.rs
src/template/: filters.rs  mod.rs
templates/: archive_month.html  archive_year.html  base.html  index.html  post.html  tag.html
themes/: style.tailwind.css  theme.yaml
themes/assets/: bckt-logo.pxd  bckt-social-preview-card.pxd
themes/assets/js/: search.js
themes/bckt3/: style.tailwind.css  theme.yaml
themes/bckt3/assets/js/: search.js
themes/bckt3/pages/: README.md
themes/bckt3/skel/: README.md  style.css
themes/bckt3/templates/: README.md  archive_month.html  archive_year.html  base.html  index.html  post-farcaster.html  post.html  rss.xml  search.html  tag.html
themes/bckt3/templates/partials/: summary-default.html  summary-farcaster.html
themes/pages/rss/: index.html
themes/plain/: theme.yaml
themes/plain/templates/: archive_month.html  archive_year.html  base.html  index.html  post-farcaster.html  post.html  rss.xml  search.html  tag.html
themes/plain/templates/partials/: search-results.html  summary-default.html  summary-farcaster.html
themes/skel/: style.css
themes/skel/fonts/opensans/: open-sans.css
themes/skel/fonts/roboto/: roboto.css
themes/skel/fonts/roboto-mono/: roboto-mono.css
themes/skel/fonts/roboto-slab/: roboto-slab.css
themes/skel/js/: lightbox.js
themes/templates/: base.html  index.html  post.html
themes/templates/partials/: summary-farcaster.html
