[package]
name = "bckt"
version = "0.2.3"
edition = "2024"

[[bin]]
name = "bckt"
path = "src/main.rs"

[[bin]]
name = "bckt-fc"
path = "src/bin/bckt_fc.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
minijinja = "1.0"
comrak = "0.21"
sled = "0.34"
walkdir = "2.5"
time = { version = "0.3", features = ["parsing", "formatting", "macros"] }
serde_json = "1.0"
url = { version = "2.5", default-features = false }
blake3 = "1.5"
tiny_http = "0.12"
notify = "6.1"
mime_guess = "2.0"
percent-encoding = "2.3"
isolang = "2.3"
whatlang = "0.16"
ureq = { version = "2.9", default-features = false, features = ["tls", "json"] }

[dev-dependencies]
tempfile = "3.12"
