[package]
name = "bckt"
version = "0.5.0"
edition = "2024"
repository = "https://github.com/vrypan/bckt"
description = "bckt is an opinionated but flexible static site generator for blogs"
homepage = "https://github.com/vrypan/bckt"
license = "MIT"

[[bin]]
name = "bckt"
path = "src/main.rs"

[[bin]]
name = "bckt-fc"
path = "src/extras/bckt_fc.rs"

[[bin]]
name = "bckt-new"
path = "src/extras/bckt_new.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
minijinja = "1.0"
comrak = "0.21"
sled = "0.34"
walkdir = "2.5"
time = { version = "0.3", features = ["parsing", "formatting", "macros"] }
serde_json = "1.0"
url = { version = "2.5", default-features = false }
blake3 = "1.5"
tiny_http = "0.12"
notify = "6.1"
mime_guess = "2.0"
percent-encoding = "2.3"
isolang = "2.3"
whatlang = "0.16"
ureq = { version = "2.9", default-features = false, features = ["tls", "json"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tempfile = "3.12"

[dev-dependencies]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-message = "Release {{version}}"
tag-name = "v{{version}}"
push = true
